[gd_scene load_steps=10 format=3 uid="uid://d0pftcier2ckd"]

[ext_resource type="Script" uid="uid://cjhxecs34uwxg" path="res://story_editor.gd" id="1_snmhm"]
[ext_resource type="Script" uid="uid://bo3x6diyb5oys" path="res://data/Database.gd" id="2_1jyyi"]
[ext_resource type="Script" uid="uid://b2igmyojuj8p4" path="res://map/map_preview.gd" id="3_silbp"]
[ext_resource type="Script" uid="uid://mohqke3jihyu" path="res://story_editor_info.gd" id="4_1wbvv"]
[ext_resource type="Theme" uid="uid://drh1gcllyfff7" path="res://new_theme.tres" id="5_tcu1h"]
[ext_resource type="Script" uid="uid://mgmjm2mmjfna" path="res://main_scene.gd" id="6_hq6wl"]

[sub_resource type="Animation" id="Animation_272bh"]
resource_name = "pin"
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5vw27"]
_data = {
&"pin": SubResource("Animation_272bh")
}

[sub_resource type="GDScript" id="GDScript_lquwl"]

[node name="MainNote" type="Node2D"]
script = ExtResource("1_snmhm")

[node name="Database" type="Node" parent="."]
script = ExtResource("2_1jyyi")

[node name="MapPreview" type="SubViewportContainer" parent="."]
offset_right = 512.0
offset_bottom = 512.0
script = ExtResource("3_silbp")

[node name="SubViewport" type="SubViewport" parent="MapPreview"]
handle_input_locally = false
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="MapPreview/SubViewport"]

[node name="StoryCreator" type="CanvasLayer" parent="."]
script = ExtResource("4_1wbvv")

[node name="StoryPanel" type="Panel" parent="StoryCreator"]
offset_left = 5.0
offset_top = 5.0
offset_right = 500.0
offset_bottom = 120.0
theme = ExtResource("5_tcu1h")

[node name="TitleLabel" type="Label" parent="StoryCreator/StoryPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 60.0
offset_bottom = 30.0
text = "故事标题:"

[node name="TitleEdit" type="LineEdit" parent="StoryCreator/StoryPanel"]
layout_mode = 0
offset_left = 70.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 30.0
placeholder_text = "输入故事标题"

[node name="CoverLabel" type="Label" parent="StoryCreator/StoryPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 60.0
offset_bottom = 60.0
text = "封面:"

[node name="CoverBtn" type="Button" parent="StoryCreator/StoryPanel"]
layout_mode = 0
offset_left = 70.0
offset_top = 40.0
offset_right = 150.0
offset_bottom = 60.0
text = "选择封面"

[node name="DescLabel" type="Label" parent="StoryCreator/StoryPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 70.0
offset_right = 60.0
offset_bottom = 90.0
text = "简介:"

[node name="DescEdit" type="TextEdit" parent="StoryCreator/StoryPanel"]
layout_mode = 0
offset_left = 70.0
offset_top = 70.0
offset_right = 480.0
offset_bottom = 110.0
placeholder_text = "输入故事简介"
scroll_smooth = true

[node name="MapsPanel" type="Panel" parent="StoryCreator"]
offset_left = 5.0
offset_top = 125.0
offset_right = 500.0
offset_bottom = 400.0
theme = ExtResource("5_tcu1h")

[node name="MapsLabel" type="Label" parent="StoryCreator/MapsPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 30.0
text = "地图列表:"

[node name="AddMapBtn" type="Button" parent="StoryCreator/MapsPanel"]
layout_mode = 0
offset_left = 400.0
offset_top = 10.0
offset_right = 450.0
offset_bottom = 30.0
text = "+ 添加地图"

[node name="MapList" type="VBoxContainer" parent="StoryCreator/MapsPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 480.0
offset_bottom = 260.0
theme = ExtResource("5_tcu1h")

[node name="DebugPanel" type="Panel" parent="StoryCreator"]
theme = ExtResource("5_tcu1h")

[node name="DebugLabel" type="Label" parent="StoryCreator/DebugPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 30.0
text = "地图调试:"

[node name="MapDescEdit" type="TextEdit" parent="StoryCreator/DebugPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 480.0
offset_bottom = 100.0
placeholder_text = "输入地图描述:一片被迷雾笼罩的魔法森林，远处有积雪的火山，山下有河流，还有村庄"
scroll_smooth = true

[node name="AIDataLabel" type="Label" parent="StoryCreator/DebugPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 110.0
offset_right = 100.0
offset_bottom = 130.0
text = "AI数据:"

[node name="AIDataEdit" type="TextEdit" parent="StoryCreator/DebugPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 130.0
offset_right = 480.0
offset_bottom = 190.0
placeholder_text = "AI生成的地图数据"

[node name="MapDataLabel" type="Label" parent="StoryCreator/DebugPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 200.0
offset_right = 100.0
offset_bottom = 220.0
text = "地图数据:"

[node name="MapDataEdit" type="TextEdit" parent="StoryCreator/DebugPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 220.0
offset_right = 480.0
offset_bottom = 280.0
placeholder_text = "修改后的地图数据"

[node name="RegenerateBtn" type="Button" parent="StoryCreator/DebugPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 290.0
offset_right = 120.0
offset_bottom = 320.0
text = "重新生成AI"

[node name="PreviewBtn" type="Button" parent="StoryCreator/DebugPanel"]
layout_mode = 0
offset_left = 130.0
offset_top = 290.0
offset_right = 220.0
offset_bottom = 320.0
text = "执行预览"

[node name="SaveMapBtn" type="Button" parent="StoryCreator/DebugPanel"]
layout_mode = 0
offset_left = 230.0
offset_top = 290.0
offset_right = 320.0
offset_bottom = 320.0
text = "保存地图"

[node name="ExitDebugBtn2" type="Button" parent="StoryCreator/DebugPanel"]
layout_mode = 0
offset_left = 330.0
offset_top = 290.0
offset_right = 420.0
offset_bottom = 320.0
text = "退出调试"

[node name="HintLabel" type="Label" parent="StoryCreator/DebugPanel"]
layout_mode = 0
offset_left = 24.0
offset_top = -410.0
offset_right = 306.0
offset_bottom = -387.0

[node name="ControlBar" type="HBoxContainer" parent="StoryCreator"]
custom_minimum_size = Vector2(100, 30)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_tcu1h")
alignment = 1

[node name="ExitBtn" type="Button" parent="StoryCreator/ControlBar"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "退出编辑"

[node name="SaveBtn" type="Button" parent="StoryCreator/ControlBar"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "保存草稿"

[node name="PublishBtn" type="Button" parent="StoryCreator/ControlBar"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "发布故事"

[node name="LoadingIndicator" type="Control" parent="StoryCreator"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_tcu1h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="StoryCreator/LoadingIndicator"]
libraries = {
&"": SubResource("AnimationLibrary_5vw27")
}
script = SubResource("GDScript_lquwl")

[node name="Label" type="Label" parent="StoryCreator/LoadingIndicator"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "加载中..."

[node name="MainScene" type="CanvasLayer" parent="."]
script = ExtResource("6_hq6wl")

[node name="Background" type="TextureRect" parent="MainScene"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Content" type="Control" parent="MainScene"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BottomMenu" type="MarginContainer" parent="MainScene"]
custom_minimum_size = Vector2(0, 60)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0

[node name="MenuContainer" type="HBoxContainer" parent="MainScene/BottomMenu"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_tcu1h")
alignment = 1

[node name="BookBtn" type="Button" parent="MainScene/BottomMenu/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_tcu1h")
text = "列表📖"

[node name="AddBtn" type="Button" parent="MainScene/BottomMenu/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_tcu1h")
text = "[ + ]"

[node name="ChatBtn" type="Button" parent="MainScene/BottomMenu/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_tcu1h")
text = "聊天💬"

[node name="UserBtn" type="Button" parent="MainScene/BottomMenu/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_tcu1h")
text = "用户👤"
